<?xml	version="1.0"	encoding="utf-8"?>
<LinearLayout	xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hub_title"
        android:layout_marginTop="30dp"
        android:layout_gravity="center_horizontal"
        android:textSize="30sp"
        />
    <Button
        android:id="@+id/exo2_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/hub_exercice2_helloWorld"
        android:layout_marginTop="30dp"
        android:layout_gravity="center_horizontal"
        android:textSize="20sp"
        />
    <Button
        android:id="@+id/exo3_button_1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/hub_exercice3_XML"
        android:layout_marginTop="30dp"
        android:layout_gravity="center_horizontal"
        android:textSize="20sp"
        />
    <Button
        android:id="@+id/exo3_button_2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/hub_exercice3_Java"
        android:layout_marginTop="30dp"
        android:layout_gravity="center_horizontal"
        android:textSize="20sp"
        />
    <Button
        android:id="@+id/exo6_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/hub_exercice6_intent"
        android:layout_marginTop="30dp"
        android:layout_gravity="center_horizontal"
        android:textSize="20sp"
        />
    <Button
        android:id="@+id/exo7_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/hub_exercice7_implicite"
        android:layout_marginTop="30dp"
        android:layout_gravity="center_horizontal"
        android:textSize="20sp"
        />
    <Button
        android:id="@+id/exo8_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/hub_exercice8_appliTrain"
        android:layout_marginTop="30dp"
        android:layout_gravity="center_horizontal"
        android:textSize="20sp"
        />
    <Button
        android:id="@+id/exo9_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/hub_exercice9_planning"
        android:layout_marginTop="30dp"
        android:layout_gravity="center_horizontal"
        android:textSize="20sp"
        />
</LinearLayout>