<?xml	version="1.0"	encoding="utf-8"?>
<LinearLayout	xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_marginStart="20dp"
    android:orientation="vertical"	>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Exo7_TrainTitle"
        android:layout_marginTop="30dp"
        android:layout_gravity="center_horizontal"
        android:textSize="30sp"
        />
    <EditText
        android:id="@+id/Depart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/Exo7_Départ"
        android:textSize="25sp"/>
    <EditText
        android:id="@+id/Arrivee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/Exo7_Arrivée"
        android:textSize="25sp"/>

    <Button
        android:id="@+id/TrainButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/Exo7_Research"
        android:textSize="20sp" />
    <ListView
        android:id="@+id/listTrain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
</LinearLayout>