<?xml	version="1.0"	encoding="utf-8"?>
<LinearLayout	xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:orientation="vertical"	>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Exo3_Title"
        android:layout_marginTop="30dp"
        android:layout_gravity="center_horizontal"
        android:textSize="30sp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Exo3_Name_input"
            android:layout_marginTop="10dp"
            android:textSize="20sp"/>
        <EditText
            android:id="@+id/edit_Name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/Exo3_Name_input"
            android:textSize="20sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Exo3_Surname_input"
            android:layout_marginTop="10dp"
            android:textSize="20sp"/>
        <EditText
            android:id="@+id/edit_Surname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/Exo3_Surname_input"
            android:textSize="20sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Exo3_Age_input"
            android:layout_marginTop="10dp"
            android:textSize="20sp"/>
        <EditText
            android:id="@+id/edit_Age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/Exo3_Age_input"
            android:inputType="number"
            android:textSize="20sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Exo3_Competences_input"
            android:layout_marginTop="10dp"
            android:textSize="20sp"/>
        <EditText
            android:id="@+id/edit_Competence"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/Exo3_Competences_input"
            android:textSize="20sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Exo3_NumTel_input"
            android:layout_marginTop="10dp"
            android:textSize="20sp"/>
        <EditText
            android:id="@+id/edit_NumTel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/Exo3_NumTel_input"
            android:layout_marginTop="10dp"
            android:inputType="phone"
            android:textSize="20sp"/>
    </LinearLayout>
    <Button
        android:id="@+id/mainbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:text="@string/Exo3_validate_input"
        android:textSize="20sp" />
</LinearLayout>